align the "return to posts" div correctly

--- a/public/style/meta.css
+++ b/public/style/meta.css
@@ -234,7 +234,9 @@ body {
 }
 
 .blog-return-container {
+  position: absolute;
   padding: 15px;
+  top: 35px;
 }
 
 .blog-return:hover {
